<resources>
  <string name="app_name">KinopoiskKotlin</string>

  <string name="kinopoisk">Кинопоиск</string>
  <string name="movies">Фильмы</string>
  <string name="search">Поиск</string>

  <string name="films">Фильмы</string>
  <string name="people">Люди</string>
  <string name="tv_show">ТВ шоу</string>

  <string name="trailers">Трейлеры</string>

  <string name="afisha">Афиша</string>
  <string name="today_at_the_cinema">Сегодня в кино</string>
  <string name="all">Все</string>


  <string name="best_movies">Лучшие фильмы</string>
  <string name="popular_movies">Популярные фильмы</string>
  <string name="upcoming_movies">Скоро в кино</string>

  <string name="similar_movies">Похожие фильмы</string>
  <string name="cast">Актёрский состав</string>

  <string name="trailer">Трейлер</string>
  <string name="reviews">Рецензии</string>
  <string name="about_movie">О фильме</string>
  <string name="rating">Рейтинг</string>

  <string name="about_actor">Об актёре</string>

  <string name="about_tv_show">О ТВ шоу</string>
  <string name="similar_tv_shows">Похожие ТВ шоу</string>

  <string name="best_tv_shows">Лучшие ТВ шоу</string>
  <string name="popular_tv_shows">Популярные ТВ шоу</string>
  <string name="latest_tv_shows">Новинки ТВ шоу</string>
  <string name="today_tv_shows">Сегодняшние ТВ шоу</string>
  <string name="this_week_tv_shows">ТВ шоу на этой неделе</string>

  <string name="movie_list_type">movie_list_type</string>
  <string name="movie_id">movie_id</string>

  <string name="tv_list_type">tv_list_type</string>
  <string name="tv_id">tv_id</string>
  <string name="actor_id">actor_id</string>

  <string name="list_of_movies">Список фильмов</string>
  <string name="list_of_tv_shows">Список ТВ шоу</string>
  
  <string name="popular_actors">Популярные имена</string>



  <string name="shared_preferences">shared_preferences</string>
  <string name="sp_now_playing_movies">sp_now_playing_movies</string>
  <string name="sp_upcoming_movies">sp_upcoming_movies</string>
</resources>
